[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvcache"
version = "0.1.0"
description = "Hackathon-friendly KV cache and inference optimization toolkit for LLM systems."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "KVCache Contributors" }]
dependencies = []

[project.optional-dependencies]
torch = ["torch>=2.1"]
hf = ["transformers>=4.40"]
dev = ["pytest>=8.0"]

[project.scripts]
kvcache-demo = "kvcache.cli:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["kvcache*"]
